--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h3 {
     height: 750px;
     margin: auto;
     overflow: hidden;
-    background-image: url("http://www.playrostov.ru/Авторадио/8696969.jpg");
+    background-image: url("https://fmrostov.github.io/Dachakamensk.github.io/bg.jpg");
     background-repeat: repeat;
     background-size: cover;
 }
